mdapi/unpackaged/objects/Contractor__c.object
<CustomObject>
    <fields>
        <fullName>ContractingFirm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracting Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contractors</relationshipLabel>
        <relationshipName>Contractors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Short-Term</fullName>
                </value>
                <value>
                    <fullName>Long-Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contractor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContractingFirm__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contractor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>